--- a/VCCrypto/VCCrypto.xcodeproj/xcshareddata/xcschemes/VCCrypto.xcscheme
+++ b/VCCrypto/VCCrypto.xcodeproj/xcshareddata/xcschemes/VCCrypto.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "5557572D251BC575009979AB"
-               BuildableName = "VCEntities.framework"
-               BlueprintName = "VCEntities"
-               ReferencedContainer = "container:VCEntities.xcodeproj">
+               BlueprintIdentifier = "92CDE7A924DC78DD00F95B5D"
+               BuildableName = "VCCrypto.framework"
+               BlueprintName = "VCCrypto"
+               ReferencedContainer = "container:VCCrypto.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -26,29 +26,8 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES"
-      onlyGenerateCoverageForSpecifiedTargets = "YES">
-      <CodeCoverageTargets>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "5557572D251BC575009979AB"
-            BuildableName = "VCEntities.framework"
-            BlueprintName = "VCEntities"
-            ReferencedContainer = "container:VCEntities.xcodeproj">
-         </BuildableReference>
-      </CodeCoverageTargets>
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "55575736251BC575009979AB"
-               BuildableName = "VCEntitiesTests.xctest"
-               BlueprintName = "VCEntitiesTests"
-               ReferencedContainer = "container:VCEntities.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
@@ -71,10 +50,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "5557572D251BC575009979AB"
-            BuildableName = "VCEntities.framework"
-            BlueprintName = "VCEntities"
-            ReferencedContainer = "container:VCEntities.xcodeproj">
+            BlueprintIdentifier = "92CDE7A924DC78DD00F95B5D"
+            BuildableName = "VCCrypto.framework"
+            BlueprintName = "VCCrypto"
+            ReferencedContainer = "container:VCCrypto.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
