--- a/VCNetworking/VCNetworking.xcodeproj/xcshareddata/xcschemes/VCNetworking.xcscheme
+++ b/VCNetworking/VCNetworking.xcodeproj/xcshareddata/xcschemes/VCNetworking.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "5557572D251BC575009979AB"
-               BuildableName = "VCEntities.framework"
-               BlueprintName = "VCEntities"
-               ReferencedContainer = "container:VCEntities.xcodeproj">
+               BlueprintIdentifier = "55D7BFE924C4CBBD0090F495"
+               BuildableName = "VCNetworking.framework"
+               BlueprintName = "VCNetworking"
+               ReferencedContainer = "container:VCNetworking.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,10 +32,10 @@
       <CodeCoverageTargets>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "5557572D251BC575009979AB"
-            BuildableName = "VCEntities.framework"
-            BlueprintName = "VCEntities"
-            ReferencedContainer = "container:VCEntities.xcodeproj">
+            BlueprintIdentifier = "55D7BFE924C4CBBD0090F495"
+            BuildableName = "VCNetworking.framework"
+            BlueprintName = "VCNetworking"
+            ReferencedContainer = "container:VCNetworking.xcodeproj">
          </BuildableReference>
       </CodeCoverageTargets>
       <Testables>
@@ -43,10 +43,10 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "55575736251BC575009979AB"
-               BuildableName = "VCEntitiesTests.xctest"
-               BlueprintName = "VCEntitiesTests"
-               ReferencedContainer = "container:VCEntities.xcodeproj">
+               BlueprintIdentifier = "55D7BFF224C4CBBD0090F495"
+               BuildableName = "VCNetworkingTests.xctest"
+               BlueprintName = "VCNetworkingTests"
+               ReferencedContainer = "container:VCNetworking.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,10 +71,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "5557572D251BC575009979AB"
-            BuildableName = "VCEntities.framework"
-            BlueprintName = "VCEntities"
-            ReferencedContainer = "container:VCEntities.xcodeproj">
+            BlueprintIdentifier = "55D7BFE924C4CBBD0090F495"
+            BuildableName = "VCNetworking.framework"
+            BlueprintName = "VCNetworking"
+            ReferencedContainer = "container:VCNetworking.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
