--- a/sdk/Podfile
+++ b/sdk/Podfile
@@ -41,9 +41,7 @@ target 'VCUseCase' do
   project '../VCUseCase/VCUseCase.xcodeproj'
   vcusecase_pods
   pod 'VCRepository', path: '../VCRepository'
-  pod 'VCNetworking', path: '../VCNetworking'
-  pod 'VCJwt', path: '../VCJwt'
-  pod 'VCCrypto', path: '../VCCrypto'
+  pod 'VCEntities', path: '../VCEntities'
   target 'VCUseCaseTests'
 end
 
@@ -51,14 +49,14 @@ target 'VCRepository' do
   project '../VCRepository/VCRepository.xcodeproj'
   vcrepository_pods
   pod 'VCNetworking', path: '../VCNetworking'
-  pod 'VCJwt', path: '../VCJwt'
+  pod 'VCEntities', path: '../VCEntities'
   target 'VCRepositoryTests'
 end
 
 target 'VCNetworking' do
   project '../VCNetworking/VCNetworking.xcodeproj'
   networking_pods
-  pod 'VCJwt', path: '../VCJwt'
+  pod 'VCEntities', path: '../VCEntities'
   target 'VCNetworkingTests'
 end
 
@@ -67,7 +65,7 @@ target 'VCEntities' do
   vcentities_pods
   pod 'VCJwt', path: '../VCJwt'
   pod 'VCCrypto', path: '../VCCrypto'
-  target 'VCVCEntitiesTests'
+  target 'VCEntitiesTests'
 end
 
 target 'VCJwt' do
