--- a/sdk/sdk.xcodeproj/xcshareddata/xcschemes/sdk.xcscheme
+++ b/sdk/sdk.xcodeproj/xcshareddata/xcschemes/sdk.xcscheme
@@ -3,7 +3,7 @@
    LastUpgradeVersion = "1150"
    version = "1.3">
    <BuildAction
-      parallelizeBuildables = "NO"
+      parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
@@ -78,62 +78,6 @@
          </BuildActionEntry>
          <BuildActionEntry
             buildForTesting = "YES"
-            buildForRunning = "NO"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "92CDE7B224DC78DD00F95B5D"
-               BuildableName = "VCCryptoTests.xctest"
-               BlueprintName = "VCCryptoTests"
-               ReferencedContainer = "container:../VCCrypto/VCCrypto.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "NO"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "55ADE25F24F5406000D9990E"
-               BuildableName = "VCJwtTests.xctest"
-               BlueprintName = "VCJwtTests"
-               ReferencedContainer = "container:../VCJwt/VCJwt.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "NO"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "55D7BFF224C4CBBD0090F495"
-               BuildableName = "VCNetworkingTests.xctest"
-               BlueprintName = "VCNetworkingTests"
-               ReferencedContainer = "container:../VCNetworking/VCNetworking.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "NO"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "550F1DBC250BD898009AF467"
-               BuildableName = "VCRepositoryTests.xctest"
-               BlueprintName = "VCRepositoryTests"
-               ReferencedContainer = "container:../VCRepository/VCRepository.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
             buildForRunning = "YES"
             buildForProfiling = "YES"
             buildForArchiving = "YES"
@@ -148,20 +92,6 @@
          </BuildActionEntry>
          <BuildActionEntry
             buildForTesting = "YES"
-            buildForRunning = "NO"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "550F1E3D25101759009AF467"
-               BuildableName = "VCUseCaseTests.xctest"
-               BlueprintName = "VCUseCaseTests"
-               ReferencedContainer = "container:../VCUseCase/VCUseCase.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
             buildForRunning = "YES"
             buildForProfiling = "YES"
             buildForArchiving = "YES"
@@ -171,20 +101,6 @@
                BlueprintIdentifier = "5557572D251BC575009979AB"
                BuildableName = "VCEntities.framework"
                BlueprintName = "VCEntities"
-               ReferencedContainer = "container:../VCEntities/VCEntities.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "NO"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "55575736251BC575009979AB"
-               BuildableName = "VCEntitiesTests.xctest"
-               BlueprintName = "VCEntitiesTests"
                ReferencedContainer = "container:../VCEntities/VCEntities.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -204,66 +120,6 @@
                BuildableName = "sdkTests.xctest"
                BlueprintName = "sdkTests"
                ReferencedContainer = "container:sdk.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "92CDE7B224DC78DD00F95B5D"
-               BuildableName = "VCCryptoTests.xctest"
-               BlueprintName = "VCCryptoTests"
-               ReferencedContainer = "container:../VCCrypto/VCCrypto.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "55ADE25F24F5406000D9990E"
-               BuildableName = "VCJwtTests.xctest"
-               BlueprintName = "VCJwtTests"
-               ReferencedContainer = "container:../VCJwt/VCJwt.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "55D7BFF224C4CBBD0090F495"
-               BuildableName = "VCNetworkingTests.xctest"
-               BlueprintName = "VCNetworkingTests"
-               ReferencedContainer = "container:../VCNetworking/VCNetworking.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "550F1DBC250BD898009AF467"
-               BuildableName = "VCRepositoryTests.xctest"
-               BlueprintName = "VCRepositoryTests"
-               ReferencedContainer = "container:../VCRepository/VCRepository.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "55575736251BC575009979AB"
-               BuildableName = "VCEntitiesTests.xctest"
-               BlueprintName = "VCEntitiesTests"
-               ReferencedContainer = "container:../VCEntities/VCEntities.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "550F1E3D25101759009AF467"
-               BuildableName = "VCUseCaseTests.xctest"
-               BlueprintName = "VCUseCaseTests"
-               ReferencedContainer = "container:../VCUseCase/VCUseCase.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
