Add Tests to scheme

--- a/VCCrypto/VCCrypto.xcodeproj/xcshareddata/xcschemes/VCCrypto.xcscheme
+++ b/VCCrypto/VCCrypto.xcodeproj/xcshareddata/xcschemes/VCCrypto.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "92CDE7B224DC78DD00F95B5D"
+               BuildableName = "VCCryptoTests.xctest"
+               BlueprintName = "VCCryptoTests"
+               ReferencedContainer = "container:VCCrypto.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
