--- a/VCJwt/VCJwt.xcodeproj/xcshareddata/xcschemes/VCJwt.xcscheme
+++ b/VCJwt/VCJwt.xcodeproj/xcshareddata/xcschemes/VCJwt.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "55ADE25F24F5406000D9990E"
+               BuildableName = "VCJwtTests.xctest"
+               BlueprintName = "VCJwtTests"
+               ReferencedContainer = "container:VCJwt.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
