--- a/sdk/sdk.xcodeproj/xcshareddata/xcschemes/sdk.xcscheme
+++ b/sdk/sdk.xcodeproj/xcshareddata/xcschemes/sdk.xcscheme
@@ -3,7 +3,7 @@
    LastUpgradeVersion = "1150"
    version = "1.3">
    <BuildAction
-      parallelizeBuildables = "YES"
+      parallelizeBuildables = "NO"
       buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
@@ -102,6 +102,20 @@
                BuildableName = "VCEntities.framework"
                BlueprintName = "VCEntities"
                ReferencedContainer = "container:../VCEntities/VCEntities.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "55D7BFF224C4CBBD0090F495"
+               BuildableName = "VCNetworkingTests.xctest"
+               BlueprintName = "VCNetworkingTests"
+               ReferencedContainer = "container:../VCNetworking/VCNetworking.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
