--- a/sdk/Podfile
+++ b/sdk/Podfile
@@ -3,81 +3,26 @@ use_frameworks!
 platform :ios, '11.0'
 workspace '../sdk'
 
-def vcusecase_pods
-  podspec :path => '../VCUseCase/VCUseCase.podspec'
-end
-
-def vcrepository_pods
-  podspec :path => '../VCRepository/VCRepository.podspec'
-end
-
-def networking_pods
-  podspec :path => '../VCNetworking/VCNetworking.podspec'
-end
-
-def vcentities_pods
-  podspec :path => '../VCEntities/VCEntities.podspec'
-end
-
-def vcjwt_pods
-    podspec :path => '../VCJwt/VCJwt.podspec'
-end
-
-def vccrypto_pods
-  podspec :path => '../VCCrypto/VCCrypto.podspec'
-end
-
-target 'sdk' do
-  project '../sdk/sdk.xcodeproj'
-  pod 'VCUseCase', path: '../VCUseCase'
-  pod 'VCRepository', path: '../VCRepository'
-  pod 'VCNetworking', path: '../VCNetworking'
-  pod 'VCEntities', path: '../VCEntities'
-  pod 'VCJwt', path: '../VCJwt'
-  pod 'VCCrypto', path: '../VCCrypto'
-  target 'sdkTests'
-end
-
 target 'VCUseCase' do
   project '../VCUseCase/VCUseCase.xcodeproj'
-  vcusecase_pods
-  pod 'VCRepository', path: '../VCRepository'
-  pod 'VCEntities', path: '../VCEntities'
+  pod 'PromiseKit'
   target 'VCUseCaseTests'
 end
 
 target 'VCRepository' do
   project '../VCRepository/VCRepository.xcodeproj'
-  vcrepository_pods
-  pod 'VCNetworking', path: '../VCNetworking'
-  pod 'VCEntities', path: '../VCEntities'
+  pod 'PromiseKit'
   target 'VCRepositoryTests'
 end
 
 target 'VCNetworking' do
   project '../VCNetworking/VCNetworking.xcodeproj'
-  networking_pods
-  pod 'VCEntities', path: '../VCEntities'
+  pod 'PromiseKit'
   target 'VCNetworkingTests'
-end
-
-target 'VCEntities' do
-  project '../VCEntities/VCEntities.xcodeproj'
-  vcentities_pods
-  pod 'VCJwt', path: '../VCJwt'
-  pod 'VCCrypto', path: '../VCCrypto'
-  target 'VCEntitiesTests'
-end
-
-target 'VCJwt' do
-  project '../VCJwt/VCJwt.xcodeproj'
-  pod 'VCCrypto', path: '../VCCrypto'
-  vcjwt_pods
-  target 'VCJwtTests'
 end
 
 target 'VCCrypto' do
   project '../VCCrypto/VCCrypto.xcodeproj'
-  vccrypto_pods
+  pod 'secp256k1_ios'
   target 'VCCryptoTests'
 end
