--- a/VCCrypto/VCCrypto.xcodeproj/xcshareddata/xcschemes/VCCrypto.xcscheme
+++ b/VCCrypto/VCCrypto.xcodeproj/xcshareddata/xcschemes/VCCrypto.xcscheme
@@ -3,9 +3,23 @@
    LastUpgradeVersion = "1150"
    version = "1.3">
    <BuildAction
-      parallelizeBuildables = "YES"
+      parallelizeBuildables = "NO"
       buildImplicitDependencies = "YES">
       <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "92B9684C25240F2100F64AB0"
+               BuildableName = "Secp256k1.framework"
+               BlueprintName = "Secp256k1"
+               ReferencedContainer = "container:../Submodules/Secp256k1/Secp256k1.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
