--- a/VCServices/VCServices.xcodeproj/xcshareddata/xcschemes/VCServices.xcscheme
+++ b/VCServices/VCServices.xcodeproj/xcshareddata/xcschemes/VCServices.xcscheme
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1150"
+   LastUpgradeVersion = "1170"
    version = "1.3">
    <BuildAction
-      parallelizeBuildables = "NO"
+      parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
@@ -14,24 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "63B0AC561D595E1B00FA21D9"
-               BuildableName = "PromiseKit.framework"
-               BlueprintName = "PromiseKit"
-               ReferencedContainer = "container:../Submodules/PromiseKit/PromiseKit.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
                BlueprintIdentifier = "550F1E3425101758009AF467"
-               BuildableName = "VCUseCase.framework"
-               BlueprintName = "VCUseCase"
-               ReferencedContainer = "container:VCUseCase.xcodeproj">
+               BuildableName = "VCServices.framework"
+               BlueprintName = "VCServices"
+               ReferencedContainer = "container:VCServices.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -40,27 +26,16 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES"
-      onlyGenerateCoverageForSpecifiedTargets = "YES">
-      <CodeCoverageTargets>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "550F1E3425101758009AF467"
-            BuildableName = "VCUseCase.framework"
-            BlueprintName = "VCUseCase"
-            ReferencedContainer = "container:VCUseCase.xcodeproj">
-         </BuildableReference>
-      </CodeCoverageTargets>
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "550F1E3D25101759009AF467"
-               BuildableName = "VCUseCaseTests.xctest"
-               BlueprintName = "VCUseCaseTests"
-               ReferencedContainer = "container:VCUseCase.xcodeproj">
+               BuildableName = "VCServicesTests.xctest"
+               BlueprintName = "VCServicesTests"
+               ReferencedContainer = "container:VCServices.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -86,9 +61,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "550F1E3425101758009AF467"
-            BuildableName = "VCUseCase.framework"
-            BlueprintName = "VCUseCase"
-            ReferencedContainer = "container:VCUseCase.xcodeproj">
+            BuildableName = "VCServices.framework"
+            BlueprintName = "VCServices"
+            ReferencedContainer = "container:VCServices.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
