--- a/VCServices/VCServices.xcodeproj/xcshareddata/xcschemes/VCServices.xcscheme
+++ b/VCServices/VCServices.xcodeproj/xcshareddata/xcschemes/VCServices.xcscheme
@@ -26,7 +26,18 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "550F1E3425101758009AF467"
+            BuildableName = "VCServices.framework"
+            BlueprintName = "VCServices"
+            ReferencedContainer = "container:VCServices.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
