--- a/VCServices/VCServices.xcodeproj/xcshareddata/xcschemes/VCServices.xcscheme
+++ b/VCServices/VCServices.xcodeproj/xcshareddata/xcschemes/VCServices.xcscheme
@@ -3,7 +3,7 @@
    LastUpgradeVersion = "1170"
    version = "1.3">
    <BuildAction
-      parallelizeBuildables = "YES"
+      parallelizeBuildables = "NO"
       buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
@@ -22,8 +22,8 @@
          </BuildActionEntry>
          <BuildActionEntry
             buildForTesting = "YES"
-            buildForRunning = "NO"
-            buildForProfiling = "NO"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
             buildForArchiving = "YES"
             buildForAnalyzing = "YES">
             <BuildableReference
