Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,7 @@ steps:
   inputs:
     actions: 'clean test'
     configuration: Debug
+    sdk: iphonesimulator
     xcWorkspacePath: sdk.xcworkspace
     scheme: VCServices
     xcodeVersion: specifyPath
